@@ -445,6 +445,9 @@ class LXD(Backend):
             if proc.returncode:
                 raise subprocess.CalledProcessError(proc.returncode, cmd)
             if get_output:
+                if echo:
+                    print("Output:")
+                    print(output)
                 return output
 
     def copy_in(self, source_path, target_path):
