@@ -10,6 +10,8 @@ launchpad-buildd (155) UNRELEASED; urgency=medium
   * Make configparser imports Python 3-compatible.
   * Handle dict API changes in Python 3.
   * Raise more useful exceptions when LXD.copy_in or LXD.copy_out fail.
+  * Make Backend.run implementations print command output if echo and
+    get_output are both true.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 08 Sep 2017 13:42:17 +0100
 
